Fixed Startbutton and ConnectButton layout + StartButton functionality

--- a/AndroidAPP/DotbotAndroid_v1/app/src/main/res/values/colors.xml
+++ b/AndroidAPP/DotbotAndroid_v1/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="colorPrimary">#008CBF</color>
     <color name="colorPrimaryDark">#007099</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="stopColor">#dc2424</color>
+    <color name="startColor">#46a958</color>
 </resources>
