--- a/AndroidAPP/DotbotAndroid_v1/app/src/main/res/layout/activity_main.xml
+++ b/AndroidAPP/DotbotAndroid_v1/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,8 @@
             android:textSize="20sp"
             android:textColor="#46a958"
             android:id="@+id/button"
-            android:layout_weight="0" />
+            android:layout_weight="0"
+            android:onClick="startButtonClick" />
 
         <LinearLayout
             android:orientation="vertical"
@@ -39,7 +40,8 @@
             android:textSize="20sp"
             android:textColor="#46a958"
             android:id="@+id/button2"
-            android:layout_weight="0" />
+            android:layout_weight="0"
+            android:onClick="connectButtonClick"/>
 
     </LinearLayout>
 
@@ -51,8 +53,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
