--- a/AndroidAPP/DotbotAndroid_v1/app/src/main/res/layout/activity_main.xml
+++ b/AndroidAPP/DotbotAndroid_v1/app/src/main/res/layout/activity_main.xml
@@ -56,22 +56,59 @@
         android:layout_weight="1"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:textColor="#008CBF"
-            android:id="@+id/number_3"
-            android:layout_gravity="center" />
+            android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="wrap_content"
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Power: "
+                android:textSize="20sp"
+                android:textColor="#008CBF"
+                android:id="@+id/text_power"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:layout_gravity="center" />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:textColor="#008CBF"
+                android:id="@+id/number_3"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="left" />
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:textColor="#008CBF"
-            android:id="@+id/number_4"
-            android:layout_gravity="center" />
+            android:orientation="horizontal">
 
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Steering: "
+                android:textSize="20sp"
+                android:textColor="#008CBF"
+                android:id="@+id/text_steering"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:layout_gravity="center" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:textColor="#008CBF"
+                android:id="@+id/number_4"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="left" />
+
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
