Added icons to start button

--- a/AndroidAPP/DotbotAndroid_v1/app/src/main/res/values/colors.xml
+++ b/AndroidAPP/DotbotAndroid_v1/app/src/main/res/values/colors.xml
@@ -6,7 +6,8 @@
 
     <color name="colorPrimary">#008CBF</color>
     <color name="colorPrimaryDark">#007099</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#000000</color>
     <color name="stopColor">#dc2424</color>
     <color name="startColor">#46a958</color>
+    <color name="defaultColor">#000000</color>
 </resources>
