--- a/AndroidAPP/DotbotAndroid_v1/app/src/main/res/layout/activity_main.xml
+++ b/AndroidAPP/DotbotAndroid_v1/app/src/main/res/layout/activity_main.xml
@@ -16,10 +16,11 @@
         android:layout_height="wrap_content">
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:text="Start"
             android:textSize="20sp"
+            android:drawableLeft="@drawable/ic_start"
             android:textColor="#46a958"
             android:id="@+id/button"
             android:layout_weight="0"
@@ -34,11 +35,11 @@
         </LinearLayout>
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:text="Connect"
             android:textSize="20sp"
-            android:textColor="#46a958"
+            android:textColor="#000000"
             android:id="@+id/button2"
             android:layout_weight="0"
             android:onClick="connectButtonClick"/>
